# salt-api

./: .dockerignore  .eslintrc.json  .flake8  .gitignore  .prettierignore  .prettierrc.json  Dockerfile  Jenkinsfile  Makefile  README.md  Taskfile.yml  angular.json  compose.yml  cypress.config.ts  cypress.json  deploy.sh  docker-compose.staging.yml  docker-compose.yml  karma.conf.js  lint.sh  mkdocs.yml  mypy.ini  nginx.conf  package-lock.json  package.json  proxy.conf.json  pyproject.toml  run-backend-server.sh  run-frontend-server-and-tests.sh  tox.ini  tsconfig.json
.github/workflows/: deploy.yml  staging.yml  test.yml
cypress/e2e/: authentication.cy.ts  forgot-password.cy.ts  manage-user-profile.cy.ts  navigation-bar.cy.ts  register-user.cy.ts
cypress/integration/: authentication.spec.ts  forgot-password.spec.ts  forgot-password.ts  login.feature  login.spec.ts  login.ts  navigation-bar.spec.ts  utils.ts
cypress/pages/: login-page.ts
cypress/plugins/: database.js  database.ts  index.js  index.ts
cypress/support/: commands.ts  e2e.ts  index.ts  types.ts  utils.ts
deploy-docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml
deployment/: docker-compose.yml  nginx.conf
docs/: development.md
docs/backend/: development.md
docs/frontend/: Deployment.md  deployment.md  development.md
frontend/: Dockerfile  angular.json  docker-compose.yml  karma.conf.js  nginx.conf  package-lock.json  package.json
frontend/src/: index.html  main.ts  styles.scss
javascript/: README.md  angular.json  karma.conf.js  package.json
jenkins/: Dockerfile  Jenkinsfile  README.md  run-tests.sh
jenkins/delivery/: Jenkinsfile
jenkins/dev-deployment/: Jenkinsfile  README.md  deploy.sh  prepare_deploy_script.sh  prepare_docker_compose.sh
jenkins/tests/: Dockerfile  Jenkinsfile  run-tests.sh
python/: pyproject.toml  tox.ini
saltapi/: exceptions.py  exceptions_handling.py  logging_config.py  main.py  settings.py  util.py
src/: index.html  main.ts  polyfills.ts  styles.scss  test.ts
tests/: conftest.py  markers.py  test_util.py
(+978 files in other folders)
