[tool.poetry]
name = "saltapi"
version = "0.1.0"
description = "SALT API"
authors = ["SALT Astronomy Operations <salt-software@saao.ac.za>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
python-multipart = "^0.0.5"
aiofiles = "^0.6.0"
dsnparse = "^0.1.15"
astropy = "^5.1"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^1.8.2"}
PyMySQL = "^1.0.2"
SQLAlchemy = "^1.4.20"
inflect = "^5.3.0"
python-dateutil = "^2.8.2"
pytz = "^2021.1"
freezegun = "^1.1.0"
loguru = "^0.5.3"
sentry-sdk = "^1.3.1"
bcrypt = "^3.2.0"
defusedxml = "^0.7.1"
fastapi = "^0.87.0"
pdfkit = "^1.0.0"
PyPDF2 = "^2.11.0"
itsdangerous = "^2.1.2"
starlette = "^0.21.0"
responses = "^0.22.0"
faker = "^16.3.0"
pytest-mock = "^3.10.0"
jinja2 = "^3.1.2"
pyyaml = "^6.0.1"
wkhtmltopdf = "^0.2"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^22.10.0"}
pytest-cov = "^2.11.1"
bandit = "^1.7.0"
requests = "^2.25.1"
pydantic = {extras = ["dotenv"], version = "^1.8.1"}
pytest-asyncio = "^0.14.0"
mkdocs-macros-plugin = "^0.5.0"
syrupy = "^1.2.2"
PyYAML = "^6.0.0"
pytest-bdd = "^4.1.0"
pytest-regressions = "^2.3.1"
httpx = "^0.23.0"
mkdocs-material = "^8.5.9"
pip-audit = "^2.4.5"
wheel = "^0.38.4"
python-dotenv = "^0.21.0"
mypy = "^1.1.1"
types-pytz = "^2023.3.0.0"
types-python-dateutil = "^2.8.19.11"
types-requests = "^2.28.11.17"
ruff = "^0.0.278"
types-pyyaml = "^6.0.12.10"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "F", "B", "I"]
unfixable = ["B"]
ignore = ["E203", "E501"]
dummy-variable-rgx = "^ignore_me$"
target-version = "py310"

[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["fastapi.Body", "fastapi.Depends", "fastapi.Path", "fastapi.Query"]

[tool.ruff.pydocstyle]
convention = "numpy"
